--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -12,22 +12,25 @@ Knowing where species exist and thrive is fundamental to the sciences of ecology
 
 One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps [@kaschner_aquamaps:_2015] and International Union for Conservation of Nature (IUCN) [@iucn_iucn_2015].  These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].
 
+___sentence about SAUP - how can we rephrase the "two global-scale repositories" sentence to exclude it? "broad taxonomic coverage"?  something about not focusing just on economically important species? (is that a valid assumption about SAUP)___
+
+___or: "Several global-scale repositories predict ... In this paper we focus on two datasets that cover a broad taxonomic range: ..."___
+
 
 <!--
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations. 
 Discuss "truth" and uncertainty in species distributions.
 There is an objective "truth"; 
 -->
-Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each presents one understanding of the "truth" - one database relying primarily on expert opinion and the other on model predictions.  Uncertainties inherent in the method and intent inevitably drive differences in the range predictions made by each dataset; significant differences could ___lead to, communicate, imply___ dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  
-
-Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans [@rondinini_tradeoffs_2006; @jetz_ecological_2008].
+Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each presents one understanding of the truth - one database relying primarily on expert opinion and the other on modeling.  Uncertainties inherent in the methods and intents inevitably drive differences in the range predictions made by each dataset.  Significant differences could ___lead to, communicate, imply___ dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans [@rondinini_tradeoffs_2006; @jetz_ecological_2008].
 
 To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of marine species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  
 
-It seems fair to assume that range predictions from each dataset would be more closely aligned for well-understood species.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and suggest methods to improve confidence in species range predictions. 
+We can reasonably assume that range predictions from these two datasets would be more tightly aligned for well-understood species.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the predicted ranges align in distribution and area, and determine several issues that lead to poor alignment between the two datasets. ___
 
-We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
+We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 
-___we are not recommending one data set as better than the other!___
+___While we cannot recommend one data set as more accurate than the other, we do suggest methods to improve confidence in species range predictions and conservation outcomes based on these two datasets.___
+
 
 ___acknowledge or debunk other global data sets - e.g. SAUP?___
